# selenium-proxy

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-push-docker.yml  release.yml
selenium-proxy/: __main__.py  actions.py  messages.proto
selenium_proxy/: __main__.py  actions.py
src/: pyproject.toml  requirements.txt
src/selenium_proxy/: __main__.py  actions.py
